src/snapshots/noko__parser__tests__check_var-3.snap
---
source: src/parser.rs
expression: "parse(\"// arstarstarst\\nthis-is-a-test//arstarst\")"
---
Ok(
    [
        Var(
            "this-is-a-test",
        ),
    ],
)
