src/snapshots/noko__parser__tests__check_var-4.snap
---
source: src/parser.rs
expression: "parse(\"this-is-a-test // arstarst //arstrst\")"
---
Ok(
    [
        Var(
            "this-is-a-test",
            0..14,
        ),
    ],
)
