src/snapshots/noko__parser__tests__check_var-5.snap
---
source: src/parser.rs
expression: "parse(\"   this-is-a-test\")"
---
Ok(
    [
        Var(
            "this-is-a-test",
        ),
    ],
)
