src/snapshots/noko__parser__tests__check_var-6.snap
---
source: src/parser.rs
expression: "parse(\"\\n\\nthis-is-a-test\\n\\n\")"
---
Ok(
    [
        Var(
            "this-is-a-test",
            2..16,
        ),
    ],
)
