src/snapshots/noko__parser__tests__check_var-7.snap
---
source: src/parser.rs
expression: "parse(\"str->int\")"
---
Ok(
    [
        Var(
            "str->int",
            0..8,
        ),
    ],
)
