src/snapshots/noko__parser__tests__check_var-8.snap
---
source: src/parser.rs
expression: "parse(\"+\")"
---
Ok(
    [
        Var(
            "+",
            0..1,
        ),
    ],
)
