src/snapshots/noko__parser__tests__check_var-9.snap
---
source: src/parser.rs
expression: "parse(\"this-is-a-test//arstarst\")"
---
Ok(
    [
        Var(
            "this-is-a-test",
            0..14,
        ),
    ],
)
